syntax = "proto3";

package sbot.proto.service;

import "proto/model/node.proto";

option csharp_namespace = "SBot.Proto.Service";
option go_package = "github.com/sbot/proto/service";
option java_multiple_files = true;
option java_outer_classname = "NodeService";
option java_package = "com.gbw3bao.sbot.proto.service";
option php_namespace = "SBot\\Proto\\Service";

service NodeService {

  //create a node that been attacked
  rpc CreateNode(model.CreateNodeRequest) returns (model.Node){};


  //the ping request of node that been attacked
  rpc Ping(model.PingRequest) returns (model.PingReply){};



}